--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     </head>
     <body>
         <!-- This is a comment -->
-        <h1>Welcome to my first Webpage</h1>
+        
+            <h1 align="center">Jesse Cooper</h1>
+        
+    <h2>Computer Science student at Bridgewater State University</h2>
     </body>
 </html>
+
