--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         
             <h1 align="center">Jesse Cooper</h1>
         
-    <h2>Computer Science student at Bridgewater State University</h2>
+    <h2 align="center">Computer Science student at Bridgewater State University</h2>
     </body>
 </html>
 
