Added projects page!

--- a/index.html
+++ b/index.html
@@ -81,6 +81,8 @@
     
     </table>
     
+    <a href="project.html"><h4 align="center">Click to see my Projects</h4></a>
+
     </body>
 </html>
 
